// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Modal Lifecycle hooks should render modal without crashing when modal is opened 1`] = `
<ModalTemplate
  backdropStyle={Object {}}
  body={
    <ModalBody
      hideCallback={[MockFunction]}
    />
  }
  className=""
  hideCallback={[MockFunction]}
  modalStyle={Object {}}
  show={true}
  startAnimation={false}
/>
`;

exports[`Modal with children should redners without crashing 1`] = `
<ModalTemplate
  backdropStyle={Object {}}
  body="Test"
  className=""
  hideCallback={[MockFunction]}
  modalStyle={Object {}}
  show={false}
  startAnimation={false}
/>
`;

exports[`Modal without children should renders without crashing 1`] = `
<ModalTemplate
  backdropStyle={Object {}}
  body={
    <ModalBody
      hideCallback={[MockFunction]}
    />
  }
  className=""
  hideCallback={[MockFunction]}
  modalStyle={Object {}}
  show={false}
  startAnimation={false}
/>
`;
